--- a/app/src/main/res/drawable/button_lilac_bg_border.xml
+++ b/app/src/main/res/drawable/button_lilac_bg_border.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle">
 
     <!-- background -->
-    <solid android:color="#FFE0B2"/>
+    <solid android:color="#F3E5F5"/>
 
     <!-- border -->
     <stroke android:width="2dp"
