--- a/app/src/main/res/drawable/button_yellow_bg_border.xml
+++ b/app/src/main/res/drawable/button_yellow_bg_border.xml
@@ -2,19 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <!-- widget background -->
-    <solid
-            android:color="#FFF9C4" >
-    </solid>
+    <!-- background -->
+    <solid android:color="#FFF9C4"/>
 
-    <!-- widget border -->
-    <stroke
-            android:width="2dp"
-            android:color="#B388FF" >
-    </stroke>
+    <!-- border -->
+    <stroke android:width="2dp"
+            android:color="#B388FF"
+            />
 
-    <!-- rounded rectangle -->
-    <corners
-            android:radius="4dp"   >
-    </corners>
+    <!-- rounding -->
+    <corners android:radius="4dp"/>
 </shape>
