--- a/app/src/main/res/drawable/shadow.xml
+++ b/app/src/main/res/drawable/shadow.xml
@@ -4,20 +4,15 @@
 
     <!-- View background color -->
 <!--
-    <solid
-            android:color="@color/some_defined_color" >
-    </solid>
+    <solid android:color="@color/some_defined_color" >/
 -->
 
     <!-- View border color and width -->
     <stroke
             android:width="1dp"
-            android:color="@color/border_gray" >
-    </stroke>
+            android:color="@color/border_gray" />
 
     <!-- The radius makes the corners rounded -->
-    <corners
-            android:radius="2dp"   >
-    </corners>
+    <corners android:radius="2dp"/>
 
 </shape>
