--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,56 +3,105 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
         tools:ignore="Autofill"
         >
-
+    <ImageButton
+            android:id="@+id/btn_flag_greek"
+            style="@android:style/Widget.ImageButton"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img_content_flaggr"
+            android:scaleType="centerCrop"
+            android:src="@drawable/flag_gr_small"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+    <ImageButton
+            android:id="@+id/flag_nl_btn"
+            style="@android:style/Widget.ImageButton"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/img_content_flagnl"
+            android:scaleType="centerCrop"
+            android:src="@drawable/flag_nl_small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
     <TextView
+            android:id="@+id/lbl_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:lines="2"
-            android:text="@string/lbl_lemmalist"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:labelFor="@id/text_search"
+            android:text="@string/lbl_search"
+            app:layout_constraintBottom_toTopOf="@+id/text_search"
+            app:layout_constraintEnd_toEndOf="@+id/text_search"
+            app:layout_constraintStart_toStartOf="@+id/text_search"
             />
-    <ImageView
-            android:id="@+id/img_flag_greek"
-            android:layout_width="30dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/flag_gr_small"
-            android:contentDescription="@string/img_content_flaggr"
-            />
-    <ImageView
-            android:id="@+id/ibtn_flag_nl"
-            android:layout_width="30dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/flag_nl_small"
-            android:contentDescription="@string/img_content_flagnl"
-            />
-    <View
-            android:id="@+id/divider"
+    <EditText
+            android:id="@+id/text_search"
             android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_margin="8dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintTop_toBottomOf="@+id/img_flag_greek"
+            android:layout_height="22dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="28dp"
+            android:background="@android:color/white"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="text"
+            android:paddingStart="2dp"
+            android:singleLine="true"
+            app:layout_constraintEnd_toStartOf="@+id/btn_clear_search"
+            app:layout_constraintStart_toEndOf="@+id/btn_flag_greek"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+    <ImageButton
+            android:id="@+id/btn_clear_search"
+            android:layout_width="28dp"
+            android:layout_height="22dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/img_content_x"
+            android:src="@android:drawable/btn_dialog"
+            app:layout_constraintBottom_toBottomOf="@+id/text_search"
+            app:layout_constraintEnd_toStartOf="@+id/flag_nl_btn"
+            app:layout_constraintTop_toTopOf="@+id/text_search"
+            />
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="?android:attr/windowBackground"
+            app:layout_constraintTop_toBottomOf="@+id/text_search"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_open_deck"
+            tools:listitem="@layout/lemma_recycler_item"
+            />
+    <ImageButton
+            android:id="@+id/btn_luister"
+            style="@android:style/Widget.ImageButton"
+            android:layout_width="@dimen/btn_main_width"
+            android:layout_height="@dimen/btn_main_height"
+            android:contentDescription="@string/img_content_listener"
+            android:paddingStart="8dp"
+            android:paddingTop="16dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="16dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/listen"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.327"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <ImageButton
             android:id="@+id/btn_open_deck"
@@ -61,37 +110,15 @@
             android:layout_height="@dimen/btn_main_height"
             android:layout_marginStart="8dp"
             android:contentDescription="@string/img_content_flashcard"
-            android:scaleType="centerCrop"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="16dp"
+            android:scaleType="fitXY"
             android:src="@drawable/flash"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-    <ImageButton
-            android:id="@+id/btn_luister"
-            style="@android:style/Widget.ImageButton"
-            android:layout_width="@dimen/btn_main_width"
-            android:layout_height="@dimen/btn_main_height"
-            android:contentDescription="@string/img_content_listener"
-            android:scaleType="fitCenter"
-            android:src="@drawable/listen"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.33"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-    <ImageButton
-            android:id="@+id/btn_verb_game"
-            style="@android:style/Widget.ImageButton"
-            android:layout_width="@dimen/btn_main_width"
-            android:layout_height="@dimen/btn_main_height"
-            android:contentDescription="@string/img_content_verbgame"
-            android:scaleType="centerCrop"
-            android:src="@drawable/wiu"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.67"
             app:layout_constraintStart_toStartOf="parent"
             />
     <ImageButton
@@ -101,27 +128,33 @@
             android:layout_height="@dimen/btn_main_height"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/img_content_hangman"
-            android:scaleType="centerCrop"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="16dp"
+            android:scaleType="fitXY"
             android:src="@drawable/galgje"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.996"
             app:layout_constraintStart_toStartOf="parent"
             />
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:background="?android:attr/windowBackground"
-            android:scrollbars="none"
-            app:layout_constraintBottom_toTopOf="@+id/text_search"
+    <ImageButton
+            android:id="@+id/btn_verb_game"
+            style="@android:style/Widget.ImageButton"
+            android:layout_width="@dimen/btn_main_width"
+            android:layout_height="@dimen/btn_main_height"
+            android:contentDescription="@string/img_content_verbgame"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="16dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/verbs"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.668"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            app:layout_constraintVertical_bias="1.0"
-            tools:listitem="@layout/lemma_recycler_item"
             />
     <ProgressBar
             android:id="@+id/progress_bar"
@@ -134,38 +167,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/text_search"
-            android:text="@string/lbl_search"
-            app:layout_constraintBottom_toTopOf="@+id/btn_open_deck"
-            app:layout_constraintEnd_toStartOf="@+id/text_search"
-            app:layout_constraintTop_toBottomOf="@+id/recycler_view"
-            />
-    <EditText
-            android:id="@+id/text_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/white"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="text"
-            android:singleLine="true"
-            app:layout_constraintBottom_toTopOf="@+id/btn_open_deck"
-            app:layout_constraintEnd_toStartOf="@+id/btn_hangman"
-            app:layout_constraintStart_toEndOf="@+id/btn_open_deck"
-            />
-    <ImageButton
-            android:id="@+id/btn_clear"
-            android:layout_width="28dp"
-            android:layout_height="22dp"
-            android:src="@android:drawable/btn_dialog"
-            app:layout_constraintBottom_toBottomOf="@+id/text_search"
-            app:layout_constraintStart_toEndOf="@+id/text_search"
-            app:layout_constraintTop_toTopOf="@+id/text_search"
-            android:contentDescription="@string/img_content_x"
-            />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
