--- a/app/src/main/res/layout/flashcard.xml
+++ b/app/src/main/res/layout/flashcard.xml
@@ -106,6 +106,7 @@
                     android:paddingStart="3dp"
                     android:paddingEnd="3dp"
                     android:textColor="@android:color/black"
+                    android:textIsSelectable="true"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -154,6 +155,7 @@
                     android:layout_margin="2dp"
                     android:layout_marginStart="8dp"
                     android:background="@drawable/background_with_border"
+                    android:textIsSelectable="true"
                     android:paddingStart="3dp"
                     android:paddingEnd="3dp"
                     android:textSize="16sp"
